--- a/src/CSS_skins/flatterFX.css
+++ b/src/CSS_skins/flatterFX.css
@@ -6,7 +6,7 @@
      -fx-background-color: -dark;
     
     /*default font */
-    -fx-font-family: 'Helvetica Neue';
+    -fx-font-family: 'Segoe UI Light';
     -fx-font-size: 12.0px;
     -fx-font-weight: 900;
     -fx-text-fill: rgb(0,0,0);
